[package]
name = "smallpaint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = { git = "https://github.com/Sarvadi/glm-rs" }
halton = "0.2.1"
rayon = "1.6.0"
rand = {version = "0.8.5", features = ["std_rng"]}
