[package]
name = "smallpaint"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "painterly_example"
required-features = ["sample-scenes"]

[[example]]
name = "fresnel_example"
required-features = ["sample-scenes"]

[dependencies]
approx = "0.5.1"
nalgebra = "0.32.1"
nalgebra-glm = "0.18.0"
halton = "0.2.1"
rayon = "1.6.1"
rand = {version = "0.8.5", features = ["std_rng"]}

[features]
sample-scenes = []

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "storage-bench"
harness = false